fix: footer social icons layout with nowrap (#386)
* fix: socials layout with nowrap

* chore: revert lang switcher width

--- a/src/assets/scss/components/language-switcher.scss
+++ b/src/assets/scss/components/language-switcher.scss
@@ -14,7 +14,7 @@
 
 .switcher--language .switcher__select {
     min-width: 15rem;
-    flex: 1 0 15rem;
+    flex: 0 1 15rem;
 }
 
 .language-switcher {
